[project]
name = "teaching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "ipywidgets>=8.1.7",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "plotly>=6.1.2",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
]
